@@ -385,7 +385,7 @@ void TraversalNode::toVelocyPackHelper(VPackBuilder& nodes, unsigned flags,
   }
 
   // Out variables
-  if (usesPathOutVariable()) {
+  if (isPathOutVariableUsedLater()) {
     nodes.add(VPackValue("pathOutVariable"));
     pathOutVariable()->toVelocyPack(nodes);
   }
@@ -470,7 +470,7 @@ std::unique_ptr<ExecutionBlock> TraversalNode::createBlock(
   auto outputRegisters = RegIdSet{};
   std::unordered_map<TraversalExecutorInfos::OutputName, RegisterId, TraversalExecutorInfos::OutputNameHash> outputRegisterMapping;
 
-  if (usesVertexOutVariable()) {
+  if (isVertexOutVariableUsedLater()) {
     auto it = varInfo.find(vertexOutVariable()->id);
     TRI_ASSERT(it != varInfo.end());
     TRI_ASSERT(it->second.registerId < RegisterPlan::MaxRegisterId);
@@ -478,7 +478,7 @@ std::unique_ptr<ExecutionBlock> TraversalNode::createBlock(
     outputRegisterMapping.try_emplace(TraversalExecutorInfos::OutputName::VERTEX,
                                       it->second.registerId);
   }
-  if (usesEdgeOutVariable()) {
+  if (isEdgeOutVariableUsedLater()) {
     auto it = varInfo.find(edgeOutVariable()->id);
     TRI_ASSERT(it != varInfo.end());
     TRI_ASSERT(it->second.registerId < RegisterPlan::MaxRegisterId);
@@ -486,7 +486,7 @@ std::unique_ptr<ExecutionBlock> TraversalNode::createBlock(
     outputRegisterMapping.try_emplace(TraversalExecutorInfos::OutputName::EDGE,
                                       it->second.registerId);
   }
-  if (usesPathOutVariable()) {
+  if (isPathOutVariableUsedLater()) {
     auto it = varInfo.find(pathOutVariable()->id);
     TRI_ASSERT(it != varInfo.end());
     TRI_ASSERT(it->second.registerId < RegisterPlan::MaxRegisterId);
@@ -588,7 +588,7 @@ ExecutionNode* TraversalNode::clone(ExecutionPlan* plan, bool withDependencies,
 
 void TraversalNode::traversalCloneHelper(ExecutionPlan& plan, TraversalNode& c,
                                          bool const withProperties) const {
-  if (usesVertexOutVariable()) {
+  if (isVertexOutVariableAccessed()) {
     auto vertexOutVariable = _vertexOutVariable;
     if (withProperties) {
       vertexOutVariable = plan.getAst()->variables()->createVariable(vertexOutVariable);
@@ -597,7 +597,7 @@ void TraversalNode::traversalCloneHelper(ExecutionPlan& plan, TraversalNode& c,
     c.setVertexOutput(vertexOutVariable);
   }
 
-  if (usesEdgeOutVariable()) {
+  if (isEdgeOutVariableAccessed()) {
     auto edgeOutVariable = _edgeOutVariable;
     if (withProperties) {
       edgeOutVariable = plan.getAst()->variables()->createVariable(edgeOutVariable);
@@ -606,7 +606,7 @@ void TraversalNode::traversalCloneHelper(ExecutionPlan& plan, TraversalNode& c,
     c.setEdgeOutput(edgeOutVariable);
   }
 
-  if (usesPathOutVariable()) {
+  if (isPathOutVariableAccessed()) {
     auto pathOutVariable = _pathOutVariable;
     if (withProperties) {
       pathOutVariable = plan.getAst()->variables()->createVariable(pathOutVariable);
@@ -622,6 +622,18 @@ void TraversalNode::traversalCloneHelper(ExecutionPlan& plan, TraversalNode& c,
       c._conditionVariables.emplace(it->clone());
     } else {
       c._conditionVariables.emplace(it);
+    }
+  }
+
+  if (_pruneExpression) {
+    c._pruneExpression = _pruneExpression->clone(plan.getAst());
+    c._pruneVariables.reserve(_pruneVariables.size());
+    for (auto const& it : _pruneVariables) {
+      if (withProperties) {
+        c._pruneVariables.emplace(it->clone());
+      } else {
+        c._pruneVariables.emplace(it);
+      }
     }
   }
 
@@ -833,8 +845,32 @@ void TraversalNode::getPruneVariables(std::vector<Variable const*>& res) const {
   }
 }
 
-bool TraversalNode::usesPathOutVariable() const {
+bool TraversalNode::isPathOutVariableUsedLater() const {
   return _pathOutVariable != nullptr && options()->producePaths();
+}
+
+bool TraversalNode::isPathOutVariableAccessed() const {
+	if (_pathOutVariable != nullptr) {
+		return isPathOutVariableUsedLater() || _pruneVariables.contains(_pathOutVariable);
+	} else {
+		return false;
+	}
+}
+
+bool TraversalNode::isEdgeOutVariableAccessed() const {
+	if (_edgeOutVariable != nullptr) {
+		return isEdgeOutVariableUsedLater() || _pruneVariables.contains(_edgeOutVariable);
+	} else {
+		return false;
+	}
+}
+
+bool TraversalNode::isVertexOutVariableAccessed() const {
+	if (_vertexOutVariable != nullptr) {
+		return isVertexOutVariableUsedLater() || _pruneVariables.contains(_vertexOutVariable);
+	} else {
+		return false;
+	}
 }
 
 auto TraversalNode::options() const -> TraverserOptions* {
