@@ -138,6 +138,8 @@ devel
 * Automatically add "www-authenticate" headers to server HTTP 401 responses,
   as required by the HTTP specification.
 
+* Fixed an AQL bug that ignored PRUNE statements in OneShard setups.
+
 * Make the DOCUMENT AQL function eligible for running on DB servers in
   OneShard deployment mode. This allows pushing more query parts to DB servers
   for execution.
